Fixed home page buttons on firefox

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -42,29 +42,7 @@ h4 {
 .block .img-responsive {
     margin: 0 auto;
 }
-.bg-1 h3 {
-    color: #000;
-}
-.bg-1 p {
-    font-style: italic;
-}
-.list-group-item:first-child {
-    border-top-right-radius: 0;
-    border-top-left-radius: 0;
-}
-.list-group-item:last-child {
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-}
-.thumbnail {
-    padding: 0 0 15px 0;
-    border: none;
-    border-radius: 0;
-}
-.thumbnail p {
-    margin-top: 15px;
-    color: #555;
-}
+
 .btn {
     padding: 10px 20px;
     background-color: #333;
